--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@clerk/localizations": "^3.5.0",
+    "@clerk/nextjs": "^6.2.1",
     "@prisma/client": "^5.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "geist": "^1.3.0",
+    "lodash.merge": "^4.6.2",
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -31,6 +34,7 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
+    "@types/lodash.merge": "^4.6.9",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
